# text-rpg

./: .gitignore  Cargo.toml  README.md
docs/: act prompt 2.txt  act prompt.txt  library research.md
docs/sample prompts/: game setup 1.md  game setup 2.md  game setup 3.md
src/: aichat.rs  config.rs  globals.rs  main.rs  start_a_new_game.rs
src/commands/: act.rs  dump_world.rs  start_a_new_game.rs
src/components/: character.rs  game_info_container.rs  health.rs  inventory.rs  item.rs  monster.rs  player.rs  player_character.rs  room.rs  room_connection.rs  room_location.rs
src/lib/: extract_json_from_response.rs
